@@ -64,6 +64,15 @@ run {
     jvmArgs("--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED")
     jvmArgs("--add-opens", "java.base/java.io=ALL-UNNAMED")
     jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+    jvmArgs("--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED")
+    jvmArgs("--add-opens=javafx.base/com.sun.javafx.collections=ALL-UNNAMED")
+    jvmArgs("--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED")
+    jvmArgs("--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED")
+    jvmArgs("--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED")
+    jvmArgs("--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED")
+    jvmArgs("--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED")
+    jvmArgs("--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED")
+    jvmArgs("--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED")
 }
 
 task replaceStuff {
